--- a/main.css
+++ b/main.css
@@ -9,6 +9,26 @@ html, body {
     overflow-x: hidden;
 }
 
+.fullspan {
+    padding: 2rem;
+    padding-bottom: 1rem;
+    margin-top: 3rem;
+    width: 100vw;
+    position: relative;
+    left: calc(-55vw + 55%);
+    background: var(--background-color);
+}
+
+:target:before {
+    content: "";
+    display: block;
+    height: 100px;
+    margin: -100px 0 0;
+    position: relative;
+    z-index: -1;
+}
+  
+
 #landing h1 {
     font-family: 'Kanit', sans-serif;
     text-align: center;
@@ -40,23 +60,38 @@ canvas {
 
 #body {
     position: relative;
+    margin: 0 auto;
     margin-top: 100px;
-    margin-left: 80px;
-    margin-right: 80px;
+    max-width: 1100px;
     font-family: 'Figtree', sans-serif;
 }
 
-#footer {
-    margin-left: 80px;
-    margin-right: 80px;
+#body h2 {
+    color:var(--background-color);
+    font-size:40px;
+    margin-bottom: 0px;
+    font-family: 'Kanit', sans-serif;
 }
 
-#footer h2 {
+#body h3 {
+    font-family: 'Figtree', sans-serif;
+    margin:0;
+}
+
+.footer {
+    background-color:var(--background-color);
+    padding-top: 20px;
+    padding-bottom: 1px;
+    padding-left: 80px;
+    padding-right: 80px;
+}
+
+.footer h2 {
     font-family: 'Kanit', sans-serif;
     font-size:40px;
 }
 
-#footer p {
+.footer p {
     font-family: 'Figtree', sans-serif;
 }
 
@@ -85,6 +120,7 @@ canvas {
     opacity: 0;
     transition: opacity 1s ease-in-out;
 }
+
 #appearing.fade-in {
   opacity: 1;
 }
@@ -96,10 +132,11 @@ canvas {
     display: block;
     color: var(--supplement-color);
     text-align: center;
-    padding: 30px;
+    padding: 18px;
+    padding-top: 24px;
     text-decoration: none;
     font-family: 'Kanit', sans-serif;
-    font-size:20px;
+    font-size:18px;
     z-index: 2;
 }
 
@@ -118,7 +155,7 @@ canvas {
 
 /* Add some top padding to the page content to prevent sudden quick movement (as the navigation bar gets a new position at the top of the page (position:fixed and top:0) */
 .sticky + #body {
-    padding-top: 70px;
+    padding-top: 20px;
 }
 
 
@@ -138,7 +175,7 @@ canvas {
 
 /* Style buttons */
 .btn {
-    background-color: white;
+    background-color: transparent;
     border: none; /* Remove borders */
     color: inherit; /* White text */
     padding: 12px 16px; /* Some padding */
