--- a/main.css
+++ b/main.css
@@ -187,3 +187,19 @@ canvas {
   .btn:hover {
     color: var(--supplement-color);
   }
+
+
+.colcontainer {
+    display: flex;
+    padding-top: 2rem;
+    align-items: center;
+}
+  
+.column1 {
+    width: 25%;
+    
+}
+  
+.column2 {
+    width: 75%;
+}
